--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
     <h1>Christian's Portfolio</h1>
-    <img src="./Christian_Jack.jpg"/>
+    <img src="./Christian_Jack.jpg"
+    width="320"
+    height="450"/>
 </html>
