--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
-    <h1>Christian's Portfolio</h1>
-    <img src="./Christian_Jack.jpg"
-    width="320"
-    height="450"/>
+  <head>
+    <title>Pac-man</title>
+  </head>
+  <body>
+    <img
+      id="PacMan"
+      src="images/PacMan1.png"
+      width="200"
+      onclick="Run()"
+      style="position: absolute"
+    />
+
+    <!-- DO NOT CHANGE THIS LINE OF CODE -->
+    <script src="./pacman.js"></script>
+  </body>
 </html>
